--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 @-webkit-keyframes showL {
   0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
   50% {
     -webkit-transform: scale(1.3);
@@ -15,8 +15,8 @@
 
 @keyframes showL {
   0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
   50% {
     -webkit-transform: scale(1.3);
@@ -65,5 +65,15 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.header {
+  background-color: #efefef;
+  padding: 10px;
+}
+
+.header h1 {
+  text-align: center;
+  margin: 0;
 }
 /*# sourceMappingURL=index.css.map */
