--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -1,6 +1,8 @@
+@import "./variables";
+
 @keyframes showL {
     0% {
-        transform: scale(1);
+        transform: scale(0.5);
     }
     50% {
         transform: scale(1.3);
@@ -18,7 +20,7 @@
     nav {
         display: flex;
         justify-content: space-around;
-        background-color: #efefef;
+        background-color: $header-footer-color;
         
         .footer-icon {
             padding: 16px 30px;
