--- a/styles/index.css
+++ b/styles/index.css
@@ -76,4 +76,33 @@ a {
   text-align: center;
   margin: 0;
 }
+
+.profile {
+  background-color: #BEBEBE;
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.profile .banner {
+  width: 100%;
+  height: 100px;
+}
+
+.profile .profile-img {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  top: 140px;
+  left: 50px;
+  border-radius: 100px;
+  border: 4px solid #BEBEBE;
+}
 /*# sourceMappingURL=index.css.map */
