--- a/styles/index.css
+++ b/styles/index.css
@@ -28,6 +28,36 @@
   }
 }
 
+@-webkit-keyframes lineL {
+  0% {
+    -webkit-transform: scaleX(0.3);
+            transform: scaleX(0.3);
+  }
+  50% {
+    -webkit-transform: scaleX(0.75);
+            transform: scaleX(0.75);
+  }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+@keyframes lineL {
+  0% {
+    -webkit-transform: scaleX(0.3);
+            transform: scaleX(0.3);
+  }
+  50% {
+    -webkit-transform: scaleX(0.75);
+            transform: scaleX(0.75);
+  }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
 .footer {
   position: fixed;
   width: 100%;
@@ -43,6 +73,14 @@
   background-color: #efefef;
 }
 
+.footer nav .line-icon {
+  -webkit-animation-duration: .1s;
+          animation-duration: .1s;
+  -webkit-animation-name: lineL;
+          animation-name: lineL;
+  border-top: 5px solid #000;
+}
+
 .footer nav .footer-icon {
   padding: 16px 30px;
 }
@@ -52,7 +90,7 @@
           animation-duration: .2s;
   -webkit-animation-name: showL;
           animation-name: showL;
-  margin-top: -3px;
+  margin-top: -5px;
 }
 
 html,
@@ -68,8 +106,18 @@ a {
 }
 
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #efefef;
   padding: 10px;
+  height: 40px;
 }
 
 .header h1 {
@@ -77,8 +125,12 @@ a {
   margin: 0;
 }
 
+.header button {
+  border: none;
+}
+
 .profile {
-  background-color: #BEBEBE;
+  background-color: #FFF;
   width: 100%;
   height: 100vh;
   display: -webkit-box;
@@ -103,6 +155,11 @@ a {
   top: 140px;
   left: 50px;
   border-radius: 100px;
-  border: 4px solid #BEBEBE;
+  border: 4px solid #FFF;
+}
+
+.profile .profile-info {
+  margin-top: 80px;
+  padding-left: 20px;
 }
 /*# sourceMappingURL=index.css.map */
