--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -1,11 +1,19 @@
 @import './variables';
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: $header-footer-color;
     padding: 10px;
+    height: 40px;
 
     h1 {
         text-align: center;
         margin: 0;
+    }
+
+    button {
+        border: none;
     }
 }
