--- a/styles/scss/_profile.scss
+++ b/styles/scss/_profile.scss
@@ -1,5 +1,5 @@
 .profile {
-    background-color: #BEBEBE;
+    background-color: #FFF;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -18,6 +18,11 @@
         top: 140px;
         left: 50px;
         border-radius: 100px;
-        border: 4px solid #BEBEBE;
+        border: 4px solid #FFF;
+    }
+
+    .profile-info {
+        margin-top: 80px;
+        padding-left: 20px;
     }
 }
