--- a/styles/index.css
+++ b/styles/index.css
@@ -152,14 +152,42 @@ a {
   width: 100px;
   height: 100px;
   background-color: #fff;
-  top: 140px;
-  left: 50px;
+  top: 150px;
+  left: 25px;
   border-radius: 100px;
   border: 4px solid #FFF;
 }
 
+.profile .profile-data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 200px;
+  right: 10px;
+}
+
+.profile .profile-data .data {
+  padding: 0 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.profile .profile-data .data h4 {
+  margin: 5px 0;
+}
+
 .profile .profile-info {
-  margin-top: 80px;
-  padding-left: 20px;
+  margin-top: 100px;
+  padding: 0 20px;
+  border-bottom: 3px solid #efefef;
 }
 /*# sourceMappingURL=index.css.map */
