--- a/styles/scss/_profile.scss
+++ b/styles/scss/_profile.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 .profile {
     background-color: #FFF;
     width: 100%;
@@ -15,14 +17,33 @@
         width: 100px;
         height: 100px;
         background-color: #fff;
-        top: 140px;
-        left: 50px;
+        top: 150px;
+        left: 25px;
         border-radius: 100px;
         border: 4px solid #FFF;
     }
 
+    .profile-data {
+        display: flex;
+        position: absolute;
+        top: 200px;
+        right: 10px;
+
+        .data {
+            padding: 0 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            h4 {
+                margin: 5px 0;
+            }
+        }
+    }
+
     .profile-info {
-        margin-top: 80px;
-        padding-left: 20px;
+        margin-top: 100px;
+        padding: 0 20px;
+        border-bottom: 3px solid $header-footer-color;
     }
 }
