--- a/styles/index.css
+++ b/styles/index.css
@@ -125,8 +125,16 @@ a {
   margin: 0;
 }
 
-.header button {
+.header .normal-btn {
   border: none;
+}
+
+.header .animation-btn {
+  border: none;
+  -webkit-animation-duration: .2s;
+          animation-duration: .2s;
+  -webkit-animation-name: showL;
+          animation-name: showL;
 }
 
 .profile {
@@ -153,7 +161,7 @@ a {
   height: 100px;
   background-color: #fff;
   top: 150px;
-  left: 25px;
+  left: 10px;
   border-radius: 100px;
   border: 4px solid #FFF;
 }
@@ -189,5 +197,54 @@ a {
   margin-top: 100px;
   padding: 0 20px;
   border-bottom: 3px solid #efefef;
+}
+
+.home .idea-post {
+  margin: 20px 0;
+  padding: 10px;
+}
+
+.home .idea-post .idea-post__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home .idea-post .idea-post__header .profile-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background-color: #CDCDCD;
+}
+
+.home .idea-post .idea-post__header .username {
+  width: 180px;
+  height: 20px;
+  background-color: #CDCDCD;
+  margin-left: 20px;
+}
+
+.home .idea-post .idea-post__main {
+  margin: 20px;
+  height: 100px;
+  background-color: #CDCDCD;
+  border-radius: 8px;
+}
+
+.home .idea-post .idea-post__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.home .idea-post .idea-post__footer .idea-item {
+  border-radius: 6px;
+  margin: 20px;
+  width: 30px;
+  height: 30px;
+  background-color: #CDCDCD;
 }
 /*# sourceMappingURL=index.css.map */
