--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -13,7 +13,13 @@
         margin: 0;
     }
 
-    button {
+    .normal-btn {
         border: none;
+    }
+
+    .animation-btn {
+        border: none;
+        animation-duration: .2s;
+        animation-name: showL;
     }
 }
