--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,3 +3,7 @@
 @import "./scss/header";
 @import "./scss/profile";
 @import "./scss/home";
+@import "./scss/profile-section"; 
+@import "./scss/profile-ideas";
+@import "./scss/profile-idea";
+@import "./scss/settings";
