--- a/styles/scss/_home.scss
+++ b/styles/scss/_home.scss
@@ -20,6 +20,7 @@
                 height: 20px;
                 background-color: #CDCDCD;
                 margin-left: 20px;
+                border-radius: 4px;
             }
         }
 
