--- a/styles/scss/_profile.scss
+++ b/styles/scss/_profile.scss
@@ -45,5 +45,6 @@
         margin-top: 100px;
         padding: 0 20px;
         border-bottom: 3px solid $header-footer-color;
+        padding-bottom: 20px;
     }
 }
